# neoview

./: .gitignore  ANNOTATION_PLAN.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  install_desktop.sh  neoview.spec  pdf_crop_measure.py  pdf_measure.py  publish.sh  pyproject.toml  run.bat  run.ps1  run.sh  setup.py  uninstall_desktop.sh
.claude/agents/: bug-and-lint-fixer.md  neoview-test-auditor.md  security-vulnerability-scanner.md  unit-test-writer.md
.codex/skills/: bug-finder.md  packaging.md  python-reviewer.md  test-writer.md
.github/workflows/: ci.yml  windows-build.yml
docs/: index.html  script.js  style.css
neoview.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pdf_measurement_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/neoview/: __init__.py  __main__.py  app.py  resources.py  theme.py
src/neoview/assets/: __init__.py
src/neoview/models/: __init__.py  view_state.py
src/neoview/persistence/: __init__.py  sidecar_store.py
src/neoview/ui/: annotation_item.py  annotation_toolbar.py  dialogs.py  main_window.py  page_item.py  pdf_view.py  selection.py
src/neoview/utils/: units.py
tests/: conftest.py  test_performance_mode.py  test_professional_features.py  test_qt_interactions.py  test_selection.py  test_sidecar_store.py  test_ui_behavior.py  test_units.py
