[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neoview"
version = "0.1.6"
description = "NeoView PDF viewer with rectangular crop/measure tool"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "NeoView Contributors"}]
requires-python = ">=3.10"
keywords = ["pdf", "viewer", "measurement", "crop", "pymupdf", "pyside6"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics :: Viewers",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "PySide6",
  "PyMuPDF",
]

[project.urls]
Repository = "https://github.com/Srikanth-Mohankumar/neoview"
Issues = "https://github.com/Srikanth-Mohankumar/neoview/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.3.0",
  "build>=1.0.3",
  "pyinstaller>=6.0",
]

[project.scripts]
neoview = "neoview.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
neoview = ["assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
